2004-01-10  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-smb.el (tramp-smb-get-file-entries): In case of XEmacs,
	apply a short sleep-for.  Otherwise it returns an empty list.
	No idea what happens.

2004-01-08  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-buffer-name): Buffer name must contain the user
	if exists.  Reported by Adrian Phillips <a.phillips@met.no>.

2004-01-06  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-completion-mode): Make test for XEmacs
	explicitely.  `event-to-character' can exists in Emacs packages
	too.  Reported by Matt Swift <swift@alum.mit.edu>.

2004-01-05  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use
	`tramp-process-connection-type'.

2004-01-03  Kai Grossjohann  <kai@slowfox.dyndns.org>

	* tramp.el (tramp-process-connection-type): New variable.
	(tramp-maybe-open-connection): Use it.

2004-01-03  Kai Grossjohann  <kai@emptydomain.de>

	* tramp.el (tramp-handle-file-local-copy)
	(tramp-handle-write-region, tramp-open-connection-rsh): Variable
	name typo.  Small change.  From Patrick Tullmann
	<tullmann@flux.utah.edu>.

2003-12-27  Michael Albinus <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-completion-mode): Add XEmacs input
	events. Until now it was not necessary, because they are
	evaluated in case of unified filenames only.

	* tramp-efs.el (top): Add all XEmacs download sites to
	`tramp-default-method-alist'.  The existing settings should be
	sufficient already, but it's better to make it explicitely.
	(tramp-efs-method-given, tramp-efs-method-regexp): New variables.
	(tramp-efs-path-regexp, tramp-efs-path-format-string)
	(tramp-efs-path-format-without-user)
	(tramp-efs-path-user-at-host-format)
	(tramp-efs-path-host-format, tramp-efs-path-root-regexp): Changed
	to a function.  Their values depend on the existence of the method
	tag in filename.
	(tramp-efs-file-name-handler): Check first whether the method tag